objects/Marcom__c.object
<CustomObject>
    <description>Marcom approval process</description>
    <fields>
        <fullName>Amount_USD__c</fullName>
        <description>Value of request in USD.</description>
        <inlineHelpText>Please enter the value in USD.</inlineHelpText>
        <label>Amount (USD)</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>The status of your approval request.</description>
        <inlineHelpText>Dalila will update this box.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Any additional information.</description>
        <inlineHelpText>Please enter any other information you wish.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CostCentre2__c</fullName>
        <description>If the cost of this request is going to be split please enter second cost centre code.</description>
        <inlineHelpText>If the cost of this request is going to be split please enter second cost centre code.</inlineHelpText>
        <label>Cost Centre (2)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Centre_3__c</fullName>
        <description>If the cost of this request is going to be split please enter third cost centre code.</description>
        <inlineHelpText>If the cost of this request is going to be split please enter third cost centre code.</inlineHelpText>
        <label>Cost Centre (3)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <description>The cost centre where the cost of this event will be charged.</description>
        <label>Cost Centre</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BOSNIA/HERZEGOV</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>BULGARIA</fullName>
                </value>
                <value>
                    <fullName>BURKINA FASO</fullName>
                </value>
                <value>
                    <fullName>BURUNDI</fullName>
                </value>
                <value>
                    <fullName>CAMEROON</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>CENTRAL AFRICA</fullName>
                </value>
                <value>
                    <fullName>CHAD</fullName>
                </value>
                <value>
                    <fullName>CHILE</fullName>
                </value>
                <value>
                    <fullName>CHINA</fullName>
                </value>
                <value>
                    <fullName>COLOMBIA</fullName>
                </value>
                <value>
                    <fullName>CONGO</fullName>
                </value>
                <value>
                    <fullName>CROATIA</fullName>
                </value>
                <value>
                    <fullName>CZECH REPUBLIC</fullName>
                </value>
                <value>
                    <fullName>DENMARK</fullName>
                </value>
                <value>
                    <fullName>DOMINIAN REPUBLIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_request__c</fullName>
        <description>The date the request is entered.</description>
        <inlineHelpText>The date the request is entered.</inlineHelpText>
        <label>Date of request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Record_id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <description>Date when the expense will be made.</description>
        <inlineHelpText>Date when the expense will be made.</inlineHelpText>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12</fullName>
                    <default>true</default>
                    <label>FY12</label>
                </value>
                <value>
                    <fullName>FY13</fullName>
                </value>
                <value>
                    <fullName>FY14</fullName>
                </value>
                <value>
                    <fullName>FY15</fullName>
                </value>
                <value>
                    <fullName>FY16</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_quarter__c</fullName>
        <description>Please enter the quarter the expense will be made.</description>
        <inlineHelpText>Please enter the quarter the expense will be made.</inlineHelpText>
        <label>Fiscal Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecasted_in_Budget__c</fullName>
        <description>Has this expense been forecasted.</description>
        <inlineHelpText>Has this expense been forecasted. Please select either Yes or No.</inlineHelpText>
        <label>Forecasted in Budget</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marcom_Approval_Request_Numer__c</fullName>
        <description>Marcom Approval Request Numer</description>
        <displayFormat>{00000}</displayFormat>
        <label>Marcom Approval Request Numer</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Project__c</fullName>
        <description>Type of project.</description>
        <inlineHelpText>Please select from the pick list options.</inlineHelpText>
        <label>Type of the Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Catalogue</fullName>
                </value>
                <value>
                    <fullName>Customer Training</fullName>
                </value>
                <value>
                    <fullName>Exhibition</fullName>
                </value>
                <value>
                    <fullName>Give-aways</fullName>
                </value>
                <value>
                    <fullName>Incentives</fullName>
                </value>
                <value>
                    <fullName>New Product Launch</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other literature artwork</fullName>
                </value>
                <value>
                    <fullName>Picture</fullName>
                </value>
                <value>
                    <fullName>Printing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this request is linked to an existing opportunity please use the look up table to update this field.</description>
        <inlineHelpText>If this request is linked to an existing opportunity please use the look up table to update this field.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Marcoms</relationshipLabel>
        <relationshipName>Marcoms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Details__c</fullName>
        <inlineHelpText>Please enter some details about this request.</inlineHelpText>
        <label>Project Details</label>
        <length>450</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSD_Region__c</fullName>
        <description>RSD region.</description>
        <inlineHelpText>Please enter your RSD region.</inlineHelpText>
        <label>RSD Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANZPAC</fullName>
                </value>
                <value>
                    <fullName>CIS/RUSSIA</fullName>
                </value>
                <value>
                    <fullName>NORDIC</fullName>
                </value>
                <value>
                    <fullName>SOUTH EUROPE</fullName>
                </value>
                <value>
                    <fullName>UK/MEA</fullName>
                </value>
                <value>
                    <fullName>WEST EUROPE</fullName>
                </value>
                <value>
                    <fullName>UK/MEA DSS</fullName>
                </value>
                <value>
                    <fullName>GERMANY</fullName>
                </value>
                <value>
                    <fullName>UK, SPAIN &amp; BENELUX</fullName>
                </value>
                <value>
                    <fullName>FRANCE</fullName>
                </value>
                <value>
                    <fullName>SWITZERLAND</fullName>
                </value>
                <value>
                    <fullName>MEA</fullName>
                </value>
                <value>
                    <fullName>EAST EUROPE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSM_Region__c</fullName>
        <label>RSM Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RSD_Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AFRICA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>BELGIUM/LUXEMBOURG</fullName>
                </value>
                <value>
                    <fullName>FRANCE</fullName>
                </value>
                <value>
                    <fullName>GERMANY AXICOM</fullName>
                </value>
                <value>
                    <fullName>GERMANY INDUSTRIAL</fullName>
                </value>
                <value>
                    <fullName>GERMANY UTILITY</fullName>
                </value>
                <value>
                    <fullName>GERMANY WHOLESALER</fullName>
                </value>
                <value>
                    <fullName>GULF, GREECE, PAKISTAN</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>ISRAEL</fullName>
                </value>
                <value>
                    <fullName>ITALY</fullName>
                </value>
                <value>
                    <fullName>MAGHREB</fullName>
                </value>
                <value>
                    <fullName>MENA</fullName>
                </value>
                <value>
                    <fullName>MIDDLE EAST E.EQ</fullName>
                </value>
                <value>
                    <fullName>NETHERLANDS</fullName>
                </value>
                <value>
                    <fullName>NEW ZEALAND</fullName>
                </value>
                <value>
                    <fullName>NORDIC &amp; BALTICS</fullName>
                </value>
                <value>
                    <fullName>RUSSIA &amp; CIS</fullName>
                </value>
                <value>
                    <fullName>EAST EUROPE</fullName>
                </value>
                <value>
                    <fullName>SPAIN/PORTUGAL</fullName>
                </value>
                <value>
                    <fullName>SWITZERLAND</fullName>
                </value>
                <value>
                    <fullName>TURKEY/IRAN</fullName>
                </value>
                <value>
                    <fullName>UK/IRELAND</fullName>
                </value>
                <value>
                    <fullName>EAST AFRICA</fullName>
                </value>
                <value>
                    <fullName>WEST AFRICA</fullName>
                </value>
                <value>
                    <fullName>SOUTH AFRICA</fullName>
                </value>
                <value>
                    <fullName>N W AFRICA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_of_the_Project__c</fullName>
        <description>Enter the target of the project.</description>
        <inlineHelpText>Please enter what the target of the request is.</inlineHelpText>
        <label>Target of the Project</label>
        <length>450</length>
        <type>LongTextArea</type>
    </fields>
    <label>Marcom</label>
    <nameField>
        <label>Marcom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marcom Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>